# cube-solver

./: .gitignore  CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  README.md  SolverConnection.cpp  SolverConnection.h  Timer.cpp  Timer.h  cube.cpp  cube.h  image_acquisition.h  image_aquisition.cpp  main.cpp  mbed.cpp  mbed.h  serial.cpp  serial.h  settings.h  webcam.cfg  webcam_config.cpp  webcam_config.h
server/: MainProgram.java  m2pT.data
server/src/: CubeServer.java
sync_test/: .depend  Makefile  cube_sequence  main.cpp  mbed.cpp  mbed.h  output.txt  run_many_tests.sh
